--- a/userform.html
+++ b/userform.html
@@ -1,8 +1,11 @@
 <form method="POST" action="submit.php">
     <div class="form-group">
-      <label for="username">Username:</label>
-      <input type="text" name="username" required>
+      <label for="FirstName">First Name:</label>
+      <input type="text" name="FirstName" required>
     </div>
+    <div class="form-group">
+      <label for="LastName">Last Name:</label>
+      <input type="text" name="LastName" required>
     <div class="form-group">
       <label for="email">Email:</label>
       <input type="email" name="email" required>
