--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <form class="row g-3">
+    <form class="row g-3" method="POST" action="submit.php">
         <header>Welcome to Sign Up</header>
         <div class="col-md-4">
           <label for="validationDefault01" class="form-label">First name</label>
