--- a/form.html
+++ b/form.html
@@ -17,26 +17,26 @@
         <header>Welcome to Sign Up</header>
         <div class="col-md-4">
           <label for="validationDefault01" class="form-label">First name</label>
-          <input type="text" class="form-control" id="validationDefault01" value="First Name" required>
+          <input type="text" class="form-control" id="validationDefault01" name="firstname" required>
         </div>
         <div class="col-md-4">
           <label for="validationDefault02" class="form-label">Last name</label>
-          <input type="text" class="form-control" id="validationDefault02" value="Last Name" required>
+          <input type="text" class="form-control" id="validationDefault02" name="lastname" required>
         </div>
         <div class="col-md-4">
           <label for="validationDefaultUsername" class="form-label">Username</label>
           <div class="input-group">
             <span class="input-group-text" id="inputGroupPrepend2">@</span>
-            <input type="text" class="form-control" id="validationDefaultUsername" aria-describedby="inputGroupPrepend2" required>
+            <input type="text" class="form-control" id="validationDefaultUsername" aria-describedby="inputGroupPrepend2" name="username" required>
           </div>
         </div>
         <div class="col-md-4">
           <label for="validationDefault03" class="form-label">Email</label>
-          <input type="email" class="form-control" id="validationDefault03" required>
+          <input type="email" class="form-control" id="validationDefault03"  name="email" required>
         </div>
         <div class="col-md-3">
           <label for="validationDefault04" class="form-label">State</label>
-          <select class="form-select" id="validationDefault04" required>
+          <select class="form-select" id="validationDefault04" name="emotion">
             <option selected disabled value="">Choose emotion</option>
             <option>Happy</option>
             <option>Sad</option>
